--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,10 @@
   @apply opacity-50 cursor-not-allowed;
 }
 
+.skeleton {
+  @apply rounded bg-slate-400 animate-pulse;
+}
+
 .gradient--green {
   @apply bg-gradient-to-tr from-green-700 to-green-500;
 }
